--- a/src/template.html
+++ b/src/template.html
@@ -13,11 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet" />
   </head>
-  <body>
+  <body class="body">
     <!-- header -->
     <header class="header">
       <div class="header__logo-container">
-        <svg width="50px" height="50px" stroke-width="4" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+        <svg width="50px" height="50px" stroke-width="6" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <style>
               .a {
@@ -48,11 +48,11 @@
     <!-- main -->
     <main class="main">
       <div class="main__info-container">
-        <div class="main__palce"></div>
-        <div class="main__temperature"></div>
-        <div class="main__status-img"></div>
-        <div class="main__status-text"></div>
-        <div class="main__date-and-time"></div>
+        <div class="main__place item-grid"></div>
+        <div class="main__temperature item-grid"></div>
+        <div class="main__status-img item-grid"></div>
+        <div class="main__status-text item-grid"></div>
+        <div class="main__date-and-time item-grid"></div>
       </div>
     </main>
     <footer class="footer">
