--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
-    <!-- css -->
-    <link rel="stylesheet" href="/src/styles/general.css" />
-    <link rel="stylesheet" href="/src/styles/styles.css" />
     <!-- cdns -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
@@ -42,7 +39,11 @@
       </div>
       <form class="header__search-form">
         <input type="text" class="header__input" />
-        <button class="haeder__btn"><i class="fa-solid fa-magnifying-glass header__i"></i></button>
+        <button class="header__btn"><i class="fa-solid fa-magnifying-glass header__i"></i></button>
+        <div class="header__error-container">
+          <i class="fa-solid fa-exclamation"></i>
+          <p class="header__error-form"></p>
+        </div>
       </form>
     </header>
     <!-- main -->
