--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,7 @@
             <style>
               .a {
                 fill: none;
-                stroke: #333333;
+                stroke: #f1f1f1;
                 stroke-linecap: round;
                 stroke-linejoin: round;
               }
@@ -35,7 +35,7 @@
           <line class="a" x1="29.2548" y1="13.2983" x2="31.3762" y2="11.177" />
           <line class="a" x1="32.3195" y1="20.6971" x2="35.3195" y2="20.6971" />
         </svg>
-        <h1 class="header__logo-name">WeatherApp</h1>
+        <h1 class="header__logo-name">WEATHER APP</h1>
       </div>
       <form class="header__search-form">
         <input type="text" class="header__input" />
@@ -49,11 +49,23 @@
     <!-- main -->
     <main class="main">
       <div class="main__info-container">
-        <div class="main__place item-grid"></div>
-        <div class="main__temperature item-grid"></div>
-        <div class="main__status-img item-grid"></div>
-        <div class="main__status-text item-grid"></div>
-        <div class="main__date-and-time item-grid"></div>
+        <div class="main__place item-grid">
+          <h2 class="main__city"></h2>
+        </div>
+        <div class="main__temperature-container item-grid">
+          <h4 class="main__celcius"></h4>
+          <h3 class="main__temperature"></h3>
+        </div>
+        <div class="main__status-img item-grid">
+          <i class="main__icon"></i>
+        </div>
+        <div class="main__status-text item-grid">
+          <h3 class="main__condition"></h3>
+        </div>
+        <div class="main__date-and-time item-grid">
+          <h3 class="main__day-date"></h3>
+          <p class="main__descriptions"></p>
+        </div>
       </div>
     </main>
     <footer class="footer">
