Add loader functionality

--- a/src/template.html
+++ b/src/template.html
@@ -46,8 +46,11 @@
         </div>
       </form>
     </header>
-    <!-- main -->
+    <!-- main & loader-->
     <main class="main">
+      <div class="loader-container">
+        <div class="loader"></div>
+      </div>
       <div class="main__info-container">
         <div class="main__place item-grid">
           <h2 class="main__city"></h2>
