--- a/src/template.html
+++ b/src/template.html
@@ -11,36 +11,37 @@
     <!-- header -->
     <header class="header">
       <h1 class="header__logo">Simple Weather</h1>
-      <form class="header__search-form">
+      <form class="header__search">
         <input type="text" class="header__input" />
-        <button class="header__btn"><i class="fa-solid fa-magnifying-glass header__i"></i></button>
-        <div class="header__error-container">
+        <button class="header__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <!-- error   -->
+        <div class="header__errorContainer">
           <i class="fa-solid fa-exclamation"></i>
-          <p class="header__error-form"></p>
+          <p class="header__error"></p>
         </div>
       </form>
     </header>
     <!-- main & loader-->
     <main class="main">
-      <div class="loader-container">
+      <div class="loaderContainer">
         <div class="loader"></div>
       </div>
-      <div class="main__info-container">
-        <div class="main__place item-grid">
+      <div class="main__infoContainer">
+        <div class="main__place item">
           <h2 class="main__city"></h2>
         </div>
-        <div class="main__temperature-container item-grid">
+        <div class="main__temperatureContainer item">
           <h4 class="main__celcius"></h4>
           <h3 class="main__temperature"></h3>
         </div>
-        <div class="main__status-img item-grid">
+        <div class="main__statusImg item">
           <i class="main__icon"></i>
         </div>
-        <div class="main__status-text item-grid">
+        <div class="main__statusText item">
           <h3 class="main__condition"></h3>
         </div>
-        <div class="main__date-and-time item-grid">
-          <h3 class="main__day-date"></h3>
+        <div class="main__dateTime item">
+          <h3 class="main__dayDate"></h3>
           <p class="main__descriptions"></p>
         </div>
       </div>
