--- a/src/template.html
+++ b/src/template.html
@@ -15,10 +15,7 @@
         <input type="text" class="header__input" />
         <button class="header__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         <!-- error   -->
-        <div class="header__errorContainer">
-          <i class="fa-solid fa-exclamation"></i>
-          <p class="header__error"></p>
-        </div>
+        <span class="header__errorSearch"></span>
       </form>
     </header>
     <!-- main & loader-->
@@ -47,7 +44,7 @@
       </div>
     </main>
     <footer class="footer">
-      <p class="footer__copy">&copy; Fernando Zárate 2024</p>
+      <p class="footer__copy">&copy; 2024 Fernando Zárate</p>
     </footer>
   </body>
 </html>
