--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Weather app</title>
+    <link rel="icon" href="/src/asset/img/favicon.png" type="png" />
+    <title>Simple Weather</title>
     <!-- cdns -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   </head>
